实现基础交互

--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -1,1 +1,6 @@
-<div id="container"></div>
+<div>
+    <h3>Preview file : {{file}} </h3>
+    <div id="container">
+        <canvas></canvas>
+    </div>
+</div>
